# ip_tray

./: .gitignore  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  RELEASE_COMMANDS.md  launcher.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: dev_check.py
src/ip_tray/: __init__.py  app.py  config.py  graph.py  menu_graph_image.py  net.py
tests/: test_config.py  test_graph.py  test_menu_graph_image.py  test_net.py
